
Regina - A Normal Surface Theory Calculator

    This file gives a detailed list of changes between releases,
    including all changes to the C++/Python API.

    For just the key highlights, see the (far more readable) file
    HIGHLIGHTS.txt.

Version 7.1  [ TODO ]

    GENERAL:
        - Regina now supports Python 3 only (not Python 2 or 3).
    ENGINE:
        Class Example<4>:
            - New routine k3().
            - Reflected the result of cp2() so that it has intersection
              form [1], not [-1].
        Class IntersectionForm:
            - New class to compute invariants of intersection forms.
        Class Isomorphism:
            - Replaced apply() with the bracket operator.  The old apply()
              is now a deprecated alias.
            - Deprecated applyInPlace(), since this is no faster than
              calling tri = iso(tri).
        Class Matrix:
            - Routine det() now throws an exception if the matrix is not
              square (this is a precondition), and now returns 1 if the
              matrix is detected to be 0-by-0 (although such matrices are
              formally not supported by the Matrix class).
        Class Triangulation<dim>:
            - New suite of routines countBoundaryFaces().
            - New suite of public routines dualBoundaryMap() (these were
              previously private, and had a more complex interface).
            - New suite of routines dualToPrimal().
        Class Triangulation<4>:
            - New routine intersectionForm().
        Routine for_constexpr():
            - New routine to support compile-time for loops.
    PYTHON:
        - For classes that have a bool() cast operator, this is now wrapped in
          Python using the special __bool__() function (i.e., Python will now
          cast such objects to bool in the same way).
    UTILITIES:
        tricensus:
            - Now supports multithreading via the new --threads option.